--- a/package.json
+++ b/package.json
@@ -5,18 +5,27 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p $PORT",
     "lint": "next lint"
   },
   "dependencies": {
+    "@paypal/react-paypal-js": "^7.8.3",
+    "@reduxjs/toolkit": "^1.9.3",
     "@types/node": "18.15.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.4",
+    "cookie": "^0.5.0",
+    "dispatch": "^1.0.2",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "mongoose": "^7.0.3",
     "next": "13.2.4",
+    "options": "^0.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
     "typescript": "5.0.2"
   }
 }
